Fixing spacing below MobileUserDisclosure

--- a/src/components/mobile-menu-container/components/mobile-user-disclosure/mobile-user-disclosure.module.css
+++ b/src/components/mobile-menu-container/components/mobile-user-disclosure/mobile-user-disclosure.module.css
@@ -5,7 +5,6 @@
 	/* properties */
 	background-color: var(--token-color-surface-faint);
 	border-radius: 6px;
-	margin-bottom: 24px;
 }
 
 .activator {
